[package]
name = "openssl10x-sys"
version = "0.20.0"
authors = ["kyunghoon <kyunghoon@gmail.com>"]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
vendored = ['openssl10x-src']
# Enables workaround for wsl2 on removable media, otherwise symlinks will fail
wsl2-workaround = ['openssl10x-src/wsl2-workaround']

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
openssl10x-src = { version = "0.1.0+1.0.2h", path = "openssl10x-src", optional = true }
pkg-config = "0.3.9"
autocfg = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
