[package]
name = "openssl10x-sys"
version = "0.20.1"
authors = ["kyunghoon <kyunghoon@gmail.com>"]
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"
#edition = "2018"
exclude = [
  'openssl/boringssl/*',
  'openssl/fuzz/*',
  'openssl/krb5/*',
  'openssl/pyca-cryptography/*',
  'openssl/test/*',
]

[features]
default = []
vendored = []
# Enables compilation of some older algorithms: md2 (hash), rc5 (block cypher) and enabled use of
# some weaker algorithms in SSL connections. These are generally not recommended for use.
weak-crypto = []
# Enables compilation of the Camellia symmetric key block cypher. Since hardware acceleration for
# it is not available on most systems, this is not as used as AES.
camellia = []
# Enables compilation of International Data Encryption Algorithm (IDEA), a symmetric key block
# cypher sometimes used as an AES128 alternative.
idea = []
# Enables compilation of SEED, a symmetric key block cypher mostly used in South Korea, but
# otherwise not widely supported.
seed = []
# Enables workaround for wsl2 on removable media, otherwise symlinks will fail
wsl2-workaround = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.9"
autocfg = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
